# sc-mcp

./: .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
mcpb/: manifest.json
skills/scalable-capital/: SKILL.md
src/sc_mcp/: __init__.py  server.py
tests/: test_sc_mcp.py
